--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/mgnrega
+# MongoDB Connection
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379
+# Redis Connection
+REDIS_URL=redis://default:password@endpoint.redis-cloud.com:17701
 
-# Data.gov.in API Configuration
-NEXT_PUBLIC_DATA_GOV_API_KEY=579b464db66ec23bdd000001cdd3946e44ce4aad7209ff7b23ac571b
+# Data.gov.in API Key
+DATA_GOV_API_KEY=your_api_key_here
 
-# Node Environment
-NODE_ENV=development
+# Application URL (will be provided by Vercel)
+NEXT_PUBLIC_API_URL=https://your-app.vercel.app
